Last Sync: 2025-09-21 16:40 (Mobile)

--- a/podcast/meetings/21..md
+++ b/podcast/meetings/21..md
@@ -38,5 +38,10 @@
 - mikor, hogyan, ki?
 - kell még vmi?
 - pólók kérdése
-	- rendszer public bemutatása
-- aa
+	- rendszer bemutatása mindenkinek
+- mikrofonok használata - gyorstalpaló - adapterek
+## Rádió-merger
+- részletek tárgyalása
+- ötletek gyűjtése
+- promóció lehetőségének felvezetése
+- 
