Last Sync: 2025-09-21 16:42 (Mobile)

--- a/podcast/meetings/21..md
+++ b/podcast/meetings/21..md
@@ -44,4 +44,8 @@
 - részletek tárgyalása
 - ötletek gyűjtése
 - promóció lehetőségének felvezetése
-- 
+- Babinak válasz
+## Instagram DM-ek felelősége
+- Peti/Donát/aki akarja?
+## Levelek
+-Pamkutya
